--- a/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
+++ b/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
@@ -53,6 +53,14 @@
     <Compile Include="Migrations\201902060020579_Init.Designer.cs">
       <DependentUpon>201902060020579_Init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101100125573_AddBasket.cs" />
+    <Compile Include="Migrations\202101100125573_AddBasket.Designer.cs">
+      <DependentUpon>202101100125573_AddBasket.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202101100128579_AddBasket2.cs" />
+    <Compile Include="Migrations\202101100128579_AddBasket2.Designer.cs">
+      <DependentUpon>202101100128579_AddBasket2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -70,6 +78,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201902060020579_Init.resx">
       <DependentUpon>201902060020579_Init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101100125573_AddBasket.resx">
+      <DependentUpon>202101100125573_AddBasket.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101100128579_AddBasket2.resx">
+      <DependentUpon>202101100128579_AddBasket2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
