--- a/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
+++ b/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
@@ -65,6 +65,10 @@
     <Compile Include="Migrations\202101122234194_fixProduct.Designer.cs">
       <DependentUpon>202101122234194_fixProduct.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101132332311_AddCustomerModel.cs" />
+    <Compile Include="Migrations\202101132332311_AddCustomerModel.Designer.cs">
+      <DependentUpon>202101132332311_AddCustomerModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -91,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101122234194_fixProduct.resx">
       <DependentUpon>202101122234194_fixProduct.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101132332311_AddCustomerModel.resx">
+      <DependentUpon>202101132332311_AddCustomerModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
