--- a/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
+++ b/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
@@ -69,6 +69,14 @@
     <Compile Include="Migrations\202101132332311_AddCustomerModel.Designer.cs">
       <DependentUpon>202101132332311_AddCustomerModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101140014182_Orders.cs" />
+    <Compile Include="Migrations\202101140014182_Orders.Designer.cs">
+      <DependentUpon>202101140014182_Orders.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202101140041119_Orderfix.cs" />
+    <Compile Include="Migrations\202101140041119_Orderfix.Designer.cs">
+      <DependentUpon>202101140041119_Orderfix.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -98,6 +106,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101132332311_AddCustomerModel.resx">
       <DependentUpon>202101132332311_AddCustomerModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101140014182_Orders.resx">
+      <DependentUpon>202101140014182_Orders.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101140041119_Orderfix.resx">
+      <DependentUpon>202101140041119_Orderfix.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
